# harmony-ai

ai-backend/: .env.example  .gitignore  application.py  pyproject.toml
ai-backend/src/: application.py  system-prompt.txt
ai-backend/src/benchmarks/: all-groq-models.py
ai-backend/src/test/: deepgram-aura-tts.py  elevenlabs-tts.py
