[tool.poetry]
name = "quickagent"
version = "0.1.0"
description = ""
authors = ["Aryan Prince <aryanprincesanty@icloud.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
